update Header bar

--- a/src/components/directory/directory.style.scss
+++ b/src/components/directory/directory.style.scss
@@ -1,5 +1,6 @@
 .directory-menu {
     width: 100%;
+    height: 800px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
