--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,9 @@ body{
     font-family: 'Calligraffitti', cursive;
     padding: 20px 60px;
 }
+
+a{
+    text-decoration: none;
+    color: black;
+    font-size: 1.4em;
+}
