--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
-body{
+body {
     font-family: 'Calligraffitti', cursive;
     padding: 20px 60px;
 }
 
-a{
+a {
     text-decoration: none;
     color: black;
     font-size: 1.4em;
+}
+
+* {
+    box-sizing: border-box;
 }
