--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -6,7 +6,7 @@
     margin-bottom: 25px;
   
     .logo-container {
-      height: 100%;
+      height: 90%;
       width: 70px;
       padding: 25px;
     }
@@ -14,6 +14,7 @@
     .options {
       width: 50%;
       height: 100%;
+      padding-top: 1%;
       display: flex;
       align-items: center;
       justify-content: flex-end;
