--- a/src/pages/checkout/checkout.style.scss
+++ b/src/pages/checkout/checkout.style.scss
@@ -28,5 +28,15 @@
       margin-left: auto;
       font-size: 36px;
     }
+    button{
+      margin-left: auto;
+    }
+    .test-warning{
+      text-align: center;
+      margin-top: 60px;
+      margin-bottom: 60px;
+      font-size: 24px;
+      color: red;
+    }
   }
   
