--- a/src/components/cart-icon/cart-icon.style.scss
+++ b/src/components/cart-icon/cart-icon.style.scss
@@ -7,6 +7,9 @@
   justify-content: center;
   cursor: pointer;
   bottom: 10%;
+  background-color: white;
+  border: none;
+
 
   .shopping-icon {
     width: 30px;
