--- a/src/components/cart-dropdown/cart-dropdown.style.scss
+++ b/src/components/cart-dropdown/cart-dropdown.style.scss
@@ -1,29 +1,53 @@
 .cart-dropdown {
-    position: absolute;
-    width: 240px;
-    height: 340px;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    border: 1px solid black;
-    background-color: white;
-    top: 90px;
-    right: 40px;
-    z-index: 5;
-  .empty-message{
+  position: absolute;
+  width: 240px;
+  height: 340px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border: 1px solid black;
+  background-color: white;
+  top: 90px;
+  right: 40px;
+  z-index: 5;
+  .empty-message {
     font-size: 18px;
     margin: 50px auto;
   }
-    .cart-items {
-      height: 240px;
-      display: flex;
-      flex-direction: column;
-      overflow: auto;
-    }
-  
-    button {
-      margin-top: auto;
-      font-size: small;
+  .cart-items {
+    height: 240px;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+  }
+
+  button {
+    margin-top: auto;
+    font-size: small;
+  }
+  .checkout-button {
+    min-width: 165px;
+    width: auto;
+    height: 50px;
+    letter-spacing: 0.5px;
+    line-height: 50px;
+    padding: 0 35px 0 35px;
+    font-size: 15px;
+    background-color: black;
+    color: white;
+    text-transform: uppercase;
+    font-family: "Calligraffitti";
+    font-weight: bolder;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    font-size: small;
+
+    &:hover {
+      background-color: white;
+      color: black;
+      border: 1px solid black;
     }
   }
-  
+}
